@@ -1,3 +1,8 @@
+Wed Feb 11 16:44:20 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ancdata.c (ancillary_s_ip_pktinfo): make 3rd argument
+	  optional.
+
 Wed Feb 11 15:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (ary_make_shared): returns shared root array itself, and
